--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			</main>
 
 			<aside id="sidebar" class="card">
-				<img src="images/profile.png">
+				<img src="/images/profile.png">
 				<p><em><a href = "https://www.facebook.com/AymanAlexanPharmacyHurghada" target="_blank"> Pharmacist</a> and <strong>Web Developer</strong></em></p>
 				<nav>
 					<ol>
